Added compoments for left sidebar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,10 +6,17 @@
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
+  /*Fonts*/
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  /*Colors*/
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-input-border: oklch(86.9% 0.022 252.894);
+  --color-primary: oklch(98.4% 0.003 247.858);
+  --color-secondary: oklch(57.7% 0.245 27.325);
+  /*Spacing*/
+  /*Font-size*/
 }
 
 @media (prefers-color-scheme: dark) {
