Added components and title for right sidebar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
   --color-input-border: oklch(86.9% 0.022 252.894);
   --color-primary: oklch(98.4% 0.003 247.858);
   --color-secondary: oklch(57.7% 0.245 27.325);
+  --color-tertiary: oklch(70.4% 0.04 256.788);
   /*Spacing*/
   /*Font-size*/
 }
